# planetary

./: .gitignore  ANDROID_PORT.md  CMakeLists.txt  LICENSE  README.md  run.sh
.github/workflows/: build.yml
android/: install_shield.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/shaders/es/: billboard.vert  bloom_bright.frag  bloom_composite.frag  orbit_ring.vert  planet.frag  saturn_ring.frag  saturn_ring.vert  star.vert
android/app/src/main/cpp/: CMakeLists.txt  android_music_data.h  android_shader.h
android/app/src/main/java/com/kawkaw/planetary/: PlanetaryActivity.java
shaders/: billboard.frag  billboard.vert  bloom_blur.frag  bloom_bright.frag  bloom_composite.frag  fullscreen.vert  gravity_ripple.frag  planet.frag  saturn_ring.frag  saturn_ring.vert  star.frag  star.vert  star_points.frag  star_points.vert
shaders/es/: billboard.frag  bloom_blur.frag  fullscreen.vert  gravity_ripple.frag  orbit_ring.frag  planet.vert  star.frag  star_points.frag  star_points.vert
src/: camera.h  main.cpp  music_data.h  navidrome_client.h  shader.h
